<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.order_system.OrderInfoActivity"
    tools:showIn="@layout/activity_order_info">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/accountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_order_info_Account"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout9"
            android:id="@+id/textInputLayout">

            <AutoCompleteTextView
                android:id="@+id/addressACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_order_info_Address"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout5">

            <AutoCompleteTextView
                android:id="@+id/teleACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_order_info_Telephone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout4">

            <AutoCompleteTextView
                android:id="@+id/usernameACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_order_info_Username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountTV"
            android:layout_alignParentStart="true">

            <AutoCompleteTextView
                android:id="@+id/emailACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_order_info_Mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
